<resources>
    <string name="app_name">LookingForGroup</string>

    <!-- Strings related to login -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="signed_out" >Signed out</string>
    <string name="ranked" >RANKED</string>
    <string name="normal" >NORMAL</string>
    <string name="name">Name</string>
    <string name="positions">Positions</string>
    <string name="failed">failed</string>
    <string name="lorem_ipsum">lorem_ipsum dolorem</string>
    <string name="no_username">No username</string>
    <string name="summoner_name">No summoner name</string>
    <string name="map_name">No map</string>
    <string name="lvl">lvl</string>
    <string name="owner">Owner:</string>
    <string name="map">Map:</string>
    <string name="open_positions">Open positions</string>
    <string name="role_top">Top</string>
    <string name="role_mid">Mid</string>
    <string name="role_jungler">Jungler</string>
    <string name="role_support">Support</string>
    <string name="role_bot">Bot</string>
    <string name="role_any">Any</string>
    <string name="required_rank">Rank</string>
    <string name="description">Description</string>
    <string name="description_placeholder">No description</string>
    <string name="next">Next</string>
    <string name="new_post">New post</string>
    <string name="prev">Previous</string>

    <string name="summoners_rift_map_name">Summoners Rift</string>
    <string name="howling_abyss_map_name">Howling Abyss</string>
    <string name="twisted_treeline_map_name">Twisted Treeline</string>
    <string name="special_map_name">Special</string>
    <string name="pick_your_role">Select your roles</string>
    <string name="delete_post_question">Do you really want to delete this post?</string>

    <string name="ok">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="already_applied">You already applied to this post</string>
    <string name="date">2017.03.23 20:14</string>
    <string name="application_revoked">Application revoked</string>
    <string name="deleted_post">Deleted post</string>
    <string name="confirm_application_question">Do you want to confirm your application for this post?</string>
    <string name="revoke_application">Revoke my application</string>
    <string name="confirm_application">Confirm my application</string>
    <string name="application_confirmed">application confirmed</string>
    <string name="appcept_or_reject_application">Do you want to accept or reject this application?</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="applied_for_post">Applied for post</string>
    <string name="accpted_application">accepted application</string>
    <string name="rejected_application">rejected application</string>
    <string name="failed_to_accep_application">failed to accept application</string>
    <string name="failed_to_reject_application">failed to reject application</string>
    <string name="failed_to_login">failed to login</string>
    <string name="user_has_no_summoner">user has no registered summoner</string>
    <string name="summoner_not_found">Summoner not found</string>
    <string name="summoner_found">Summoner found</string>
    <string name="logout">Logout</string>
    <string name="no_server">No server</string>
    <string name="todo">Summoner icon</string>
    <string name="summoner_level">summoner level</string>
    <string name="eune">EUNE</string>
    <string name="euw">EUW</string>
    <string name="search_summoner">Search summoner</string>
    <string name="registration_accept_summoner">Accept</string>
    <string name="accept_privacy_policy">accept privacy policy</string>
    <string name="summoner_icon">Summoner icon</string>
    <string name="new_posts">new posts are available</string>
    <string name="new_posts_available_button">New posts are available</string>
    <string name="create_new_post">create new post</string>
    <string name="reload_posts">reload posts</string>
    <string name="posts_changed">posts changed</string>
    <string name="delete_profile">Delete profile</string>
    <string name="delete_profile_question">Do you want to delete your profile?</string>
    <string name="back_to_account_selection">Back to account selection</string>
    <string name="user_profile_title">User Profile</string>
    <string name="notice_board_title">Notice Board</string>
    <string name="application_tab_title">Applicants</string>
    <string name="filter_all_maps">All maps</string>
    <string name="filter_howling_abyss">Howling Abyss</string>
    <string name="filter_summoners_rift">Summoner\'s Rift</string>
    <string name="filter_twisted_treeline">Twisted Treeline</string>
    <string name="delete">delete</string>
    <string name="revoke_application_question">Do you want to revoke your application?</string>
    <string name="handle_application_question">What would you like to do with your application?</string>
    <string name="finish">Finish</string>
    <string name="summoner_name_placeholder">summoner name</string>
</resources>
