<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">

    <Button
        android:id="@+id/logou_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/profile_summoner_icon"
        android:layout_width="188dp"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="189dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/summoner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/summoner_name"
        app:layout_constraintStart_toEndOf="@+id/profile_summoner_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_lvl"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/summoner_level"
        app:layout_constraintStart_toEndOf="@+id/profile_summoner_icon"
        app:layout_constraintTop_toBottomOf="@+id/server" />

    <TextView
        android:id="@+id/server"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/no_server"
        app:layout_constraintStart_toEndOf="@+id/profile_summoner_icon"
        app:layout_constraintTop_toBottomOf="@+id/summoner_name" />

</androidx.constraintlayout.widget.ConstraintLayout>