<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/row_item_layout">

    <TableLayout android:id="@+id/looking_for_members_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

        <TableRow android:layout_height="match_parent"
                  android:padding="5dp"
                  android:layout_margin="5dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/post_type" android:layout_margin="2dp"
                    android:layout_weight=".2"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:id="@+id/owner_row"
                  android:layout_height="match_parent"
                  android:padding="5dp"
                  android:layout_margin="5dp">
            <TextView
                    android:text="@string/owner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/owner_label" android:layout_margin="2dp"
                    android:layout_weight=".2" android:textStyle="normal|bold"/>
            <TextView
                    android:layout_width="0dp"
                    android:text="@string/summoner_name"
                    android:id="@+id/owner_summoner_name" android:layout_margin="2dp"
                    android:layout_weight=".6"/>
            <TextView
                    android:text="@string/lvl"
                    android:layout_weight="0.05"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textStyle="normal|bold"/>
            <TextView
                    android:layout_weight="0.15"
                    android:layout_width="0dp"
                    android:id="@+id/summoner_level_in_row"
                    android:layout_height="match_parent"
                    android:textStyle="normal|bold|italic"/>
        </TableRow>
        <TableRow android:layout_width="0dp" android:id="@+id/map_row"
                  android:layout_height="match_parent"
                  android:padding="5dp"
                  android:layout_margin="5dp">
            <TextView
                    android:text="@string/map"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/map_label" android:layout_margin="2dp"
                    android:layout_weight=".2" android:textStyle="normal|bold"/>
            <TextView
                    android:layout_width="0dp"
                    android:text="@string/map_name"
                    android:id="@+id/map_name" android:layout_margin="2dp"
                    android:layout_weight=".5"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/ranked"
                    android:layout_weight=".3"/>

        </TableRow>
        <TableRow android:layout_width="match_parent" android:id="@+id/positions_row"
                  android:layout_height="match_parent"
                  android:layout_margin="5dp" android:padding="5dp"
                  android:fadeScrollbars="false">
            <TextView
                    android:layout_weight="3"
                    android:text="@string/open_positions"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:id="@+id/open_position_label"
                    android:textStyle="normal|bold" android:paddingTop="5dp"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
            />
            <TextView
                    android:layout_weight="0.5"
                    android:text="5"
                    android:layout_width="0dp"
                    android:layout_height="30dp" android:id="@+id/open_position_count"
                    android:textAlignment="viewStart"
                    android:layout_gravity="start"
                    android:paddingTop="5dp"/>
            <ImageView
                    android:layout_weight="1"
                    android:layout_height="30dp" android:src="@drawable/role_top"
                    android:id="@+id/role_top_view"
                    android:alpha="0.3" android:layout_width="0dp" android:contentDescription="@string/role_top"/>
            <ImageView
                    android:layout_weight="1"
                    android:layout_height="30dp" android:src="@drawable/role_jungler"
                    android:id="@+id/role_jugnler_view"
                    android:alpha=".3" android:layout_width="0dp" android:adjustViewBounds="false"/>
            <ImageView
                    android:layout_weight="1"
                    android:layout_height="30dp" android:src="@drawable/role_mid"
                    android:id="@+id/role_mid_view"
                    android:alpha="0.3" android:layout_width="0dp"/>
            <ImageView
                    android:layout_weight="1"
                    android:layout_height="30dp" android:src="@drawable/role_support"
                    android:id="@+id/role_support_view"
                    android:alpha="0.3" android:layout_width="0dp"/>
            <ImageView
                    android:layout_weight="1"
                    android:layout_height="30dp" android:src="@drawable/role_bot"
                    android:id="@+id/role_bot_view"
                    android:layout_width="0dp"
                    android:alpha="0.3"/>

        </TableRow>
        <TableRow android:layout_width="0dp" android:id="@+id/rank_row"
                  android:layout_height="match_parent"
                  android:padding="5dp"
                  android:layout_margin="5dp">
            <TextView
                    android:text="@string/required_rank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/required_rank" android:layout_margin="2dp"
                    android:layout_weight="1" android:textStyle="normal|bold"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/min_required_rank" android:layout_margin="2dp"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/max_required_rank" android:layout_margin="2dp"
                    android:layout_weight="1"/>
        </TableRow>

    </TableLayout>
    <LinearLayout android:id="@+id/description_layout"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_margin="5dp">

        <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textStyle="normal|bold"/>
        <TextView android:id="@+id/description"
                  android:text="@string/description_placeholder"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:paddingBottom="5dp" android:paddingTop="5dp"
                  android:textStyle="normal|italic"/>
    </LinearLayout>
</LinearLayout>