<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center_horizontal"
              android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="hu.blog.megosztanam.login.LoginActivity" android:background="@color/colorPrimaryLight">

    <!-- Login progress -->
    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:text="@string/signed_out"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/status"
        tools:layout_editor_absoluteX="30dp">

        <ImageView
            android:id="@+id/summoner_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/summoner_icon"
            android:paddingEnd="5dp"
            app:srcCompat="@color/colorPrimary"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/found_summoner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="3"
            android:paddingTop="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/summoner_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="30dp">

        <RadioGroup
            android:id="@+id/region_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:checkedButton="@+id/radio_button_euw"
            android:gravity="center_horizontal"
            android:orientation='horizontal'>

            <RadioButton
                android:id="@+id/radio_button_euw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/euw" />

            <RadioButton
                android:id="@+id/radio_button_eune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eune" />
        </RadioGroup>

        <SearchView
            android:id="@+id/summonerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_search_new"
                style="@style/Widget.AppCompat.Button.Colored"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_summoner" />

            <Button
                android:id="@+id/button_accept_summoner"
                style="@style/Widget.AppCompat.Button.Colored"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registration_accept_summoner" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/privacy_and_policy_checkbox"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:text="@string/accept_privacy_policy" />

    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/email_login_form"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/back_to_account_selection"
        android:layout_width="238dp"
        android:layout_height="51dp"
        android:text="@string/back_to_account_selecion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
